--- a/src/uu/sort/Cargo.toml
+++ b/src/uu/sort/Cargo.toml
@@ -25,6 +25,8 @@ unicode-width = "0.1.8"
 uucore = { version=">=0.0.8", package="uucore", path="../../uucore", features=["fs"] }
 uucore_procs = { version=">=0.0.5", package="uucore_procs", path="../../uucore_procs" }
 tempdir = "0.3.7"
+ouroboros = "0.9.2"
+stable_deref_trait = "1.2.0"
 
 [[bin]]
 name = "sort"
