--- a/src/uu/sort/Cargo.toml
+++ b/src/uu/sort/Cargo.toml
@@ -28,6 +28,7 @@ tempdir = "0.3.7"
 ouroboros = "0.9.2"
 stable_deref_trait = "1.2.0"
 memchr = "2.4.0"
+binary-heap-plus = "0.4.1"
 
 [[bin]]
 name = "sort"
