--- a/src/uu/sort/Cargo.toml
+++ b/src/uu/sort/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/sort.rs"
 rayon = "1.5"
 rand = "0.7"
 clap = "2.33"
+compare = "0.1.0"
 fnv = "1.0.7"
 itertools = "0.10.0"
 semver = "0.9.0"
@@ -29,6 +30,7 @@ ouroboros = "0.9.2"
 stable_deref_trait = "1.2.0"
 memchr = "2.4.0"
 binary-heap-plus = "0.4.1"
+mimalloc = { version = "*", default-features = false }
 
 [[bin]]
 name = "sort"
